# lantern

./: LICENSE  README.md  pyproject.toml
filters/: extendedness.py
notebooks/: 1_dp1_diasource_characterization.ipynb  2_inj_source_characterization.ipynb  3_lagn_classifier.ipynb  data_processing.py  dp1-diasource-characterization.ipynb  simple_cuts_thresholds.yaml
src/lantern/filters/: extendedness.py
